# adksolutionsaccelerator

./: .dockerignore  .env_template  Dockerfile  Dockerfile.backend  LICENSE  api_endpoints.py  auth.py  auth_endpoints.py  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  drive_integration.py  drive_rag_requirements.txt  main.py  package-lock.json  package.json  pyproject.toml  quick_reference_adk.md  readme.md  requirements.txt  server.py  user_service.py
agents/drive_rag_agent/.adk/: session.db
agents/drive_rag_agent/tools/: drive_tools.py  rag_tools.py
agents/financial_agent/: agent.py  prompts.py
agents/financial_agent/.adk/: session.db
agents/financial_agent/tools/: database.py  document_tools.py  financial_tools.py
backend/: firebase_config.py  main.py  main.py.backup
backend/api/: agents.py  agents_chat.py  auth.py  chat.py  drive.py  sessions.py  upload.py
backend/auth/: utils.py
backend/services/: firestore_service.py  user_service.py
deployment/: deploy.py  test_deployment.py
drive_rag_agent/: agent.py  auth_utils.py  prompts.py
drive_rag_agent/tools/: __init__.py
eval/: test_eval.py
eval/data/: conversation.test.json  test_config.json
financial_agent/: __init__.py
financial_agent/.adk/: session.db
financial_agent/tools/: database.py  kpi_tools.py  market_tools.py
frontend/: .dockerignore  .env.example  .env.production  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  apply-fixes.sh  cloudbuild.yaml  generate-files.sh  index.html  nginx.conf  package-lock.json  package.json  setup.sh  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: agents.ts  auth.ts  client.ts  driveApi.ts
frontend/src/components/: AgentCard.tsx  ChatHistory.tsx  ChatInterface.tsx  FolderSelectorModal.tsx  GoogleDriveSettings.tsx  Header.tsx  Navbar.tsx
frontend/src/config/: firebase.ts
frontend/src/contexts/: AuthContext.tsx  SessionContext.tsx
frontend/src/pages/: AgentCatalogPage.tsx  AgentsPage.tsx  ChatPage.tsx  HomePage.tsx  LoginPage.tsx  OAuthCallback.tsx  SettingsPage.tsx
frontend/src/services/: api.ts  driveApi.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  helpers.ts
tests/: test_agents.py
