[project]
name = "hatchworks-ai"
version = "1.0.0"
description = "AI-powered financial analysis platform with multi-agent system"
authors = [
    {name = "HatchWorks", email = "info@hatchworks.ai"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Google ADK and AI Platform
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    # FastAPI Backend
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.9",
    # Authentication
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "email-validator>=2.2.0",
    # Google Cloud Services
    "google-cloud-firestore>=2.19.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-storage>=2.18.2",
    # Google OAuth & Drive
    "google-auth>=2.36.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.154.0",
    # Data Processing
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    # PDF & Image Processing
    "pypdf2>=3.0.1",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    # Utilities
    "tabulate>=0.9.0",
    "requests>=2.32.3",
    "firebase-admin>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.24.0",
]

deployment = [
    "absl-py>=2.2.1",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

# ⚠️ FIXED: No package structure required anymore
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Don't treat as a package - just install dependencies
py-modules = []

[tool.setuptools.packages.find]
# Don't auto-discover packages
where = ["."]
include = []
